# conan_tool_cross_build

./: CMakeLists.txt  README.md  conanfile.py
cmake/: ExampleGeneratorToolTarget.cmake
lib/: CMakeLists.txt  example-lib.cpp  example-lib.hpp
test_package/: .gitignore  CMakeLists.txt  conanfile.py  test_package.cpp
tool/: CMakeLists.txt  example-generator.cpp
